[package]
name = "udp_polygon"
version = "0.1.0"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/upd_polygon"
license = "MIT"
keywords = ["udp", "datagram"]
repository = "https://github.com/elasticrash/udp_polygon"
authors = ["stefanos.kouroupis"]

[lib]
name = "udp_polygon"
path = "./src/lib.rs"

[dependencies]
toml = "0.7"
tokio = { version = "1.29", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
serial_test = "2.0.0"
serde_json = "1.0"
